Adding activities for Anita Schüttler

--- a/src/content/champions/anita-schüttler.yaml
+++ b/src/content/champions/anita-schüttler.yaml
@@ -15,6 +15,16 @@ social:
   linkedin: anita-schüttler-21095023b
 activities:
   - contributionType: speaking
+    linkedGSFProject: Transforming Organisational Software Sustainability
+    subtype: conference-talk
+    dateFrom: 2024-04-25
+    dateTo: 2024-04-25
+    title: Real projects - real problems to solve
+    description: "Anita works as a Green Coding consultant with IT companies of different sizes. Some of them come seeking help because they have ESG based KPIs and want to reduce their IT’s emissions, others don’t even know yet that this is something they might want to do. Some run all of their workloads in the cloud, others have their own on prem data center. One thing they all seem to have in common, though: most of their devs are “sceptical” towards sustainability in IT.
+     Anita will share insights and stories from her work: How to get clients to start Green Coding initiatives even if they’re not yet interested. Where to start looking for savings potential and how to go about estimating it. What to do if a measuring tool shows numbers that seem too small to be true. And how to make sure people not only cooperate for as long as you’re there but also keep on going after you’ve left - to guarantee this change will truely be “sustainable”."
+    url: https://www.eco-compute.io/talk/real-projects-real-problems-to-solve/
+    relatedEvent: EcoCompute 2024
+  - contributionType: speaking
     linkedGSFProject: Community WG
     subtype: conference-talk
     dateFrom: 2023-12-05
