chore: fix typo in GitHub username for Felipe Rocha

--- a/src/content/champions/felipe-rocha.yaml
+++ b/src/content/champions/felipe-rocha.yaml
@@ -11,7 +11,7 @@ city: Belo Horizonte
 bio: Curious and science enthusiast. Programmer by profession and hobby. Enjoying the DevOps vibe. Anime fan. My main goal is to learn as much as possible!
 type: normal
 social:
-  github: felipefroccha
+  github: felipefrocha
   linkedin: felipefonsecarocha
 activities:
   - contributionType: speaking
