Updating profile for Marc Andre Groulx

--- a/src/content/champions/marc-andre-groulx.yaml
+++ b/src/content/champions/marc-andre-groulx.yaml
@@ -13,6 +13,7 @@ bio: |
  In his most recent role at Microsoft, as a Principal Customer Success Account Manager, Mr. Groulx is responsible for managing large enterprise accounts.  This includes working with customers to ensure operational excellence to reduce risk and maximize business value of Microsoft investments.
 type: normal
 social:
+  github: magroulx
   linkedin: marc-andre-groulx
 activities:
   - contributionType: speaking
