Updating profile for Kristina Devochko

--- a/src/content/champions/kristina-devochko.yaml
+++ b/src/content/champions/kristina-devochko.yaml
@@ -1,7 +1,7 @@
 firstName: Kristina
 lastName: Devochko
-role: Principal Cloud Engineer
-organization: Independent
+role: Platform Engineer
+organization: Tietoevry
 languages: 
   - English
   - Norwegian
