Update website URL for Marcel Russ

--- a/src/content/champions/marcel-russ.yaml
+++ b/src/content/champions/marcel-russ.yaml
@@ -21,7 +21,7 @@ type: normal
 social:
   github: napit-apps
   linkedin: marcel-russ-82a277144
-  website: mehrwert.tech
+  website: https://mehrwert.tech/
 activities:
   - contributionType: speaking
     linkedGSFProject: Carbon Aware SDK
